fixed alignment

--- a/src/style.css
+++ b/src/style.css
@@ -122,7 +122,7 @@ ul {
   font-size: 1.2em;
 }
 
-#play {
+#game-display {
   padding: 0em 0em 0em 4em;
 }
 
